--- a/Ejobs/templates/jobs/appliedjobs.html
+++ b/Ejobs/templates/jobs/appliedjobs.html
@@ -1,7 +1,7 @@
 {% include 'header.html' %}
 <title>Applied Jobs</title>
 <section class="jobs-wrapper section-wrapper">
-{% include 'bannerad.html'%}
+{% include 'bannerad1.html'%}
   <ul class="jobs-cards">
   <h1> Your applied jobs</h1>
   <h3>(jobs will get deleted if the recruiter accepts or declines your application)</h3>
